= 1.1.0 (2022-07-18)

* Make unveiler still pledge if SimpleCov is loaded, but update pledge promises (jeremyevans)

* Fix roda pg_disconnect plugin to correctly error if error_handler is already loaded (jeremyevans)

* Avoid SSL error in newer versions of net/smtp when notifying about worker crashes (jeremyevans)

* Add flock pledge, needed on Ruby 3.1+ (jeremyevans)

= 1.0.0 (2020-11-09)

* Require unicorn-lockdown-add -o and -u options, and require options have arguments (jeremyevans)

* Switch to starting unicorn master process as application user, drop chroot support, require unveil (jeremyevans)

* Remove chrooter library (jeremyevans)

* Add unveiler library for testing pledged/unveiled applications, similar to chrooter but smaller (jeremyevans)

* Add :master_execpledge option to Unicorn.lockdown, for initial pledge of worker processes (jeremyevans)

* Add :master_pledge option to Unicorn.lockdown, for pledging the master process (jeremyevans)

= 0.13.0 (2019-07-09)

* Add Chrooter.unveil for using unveil in tests (jeremyevans)

* Support Unicorn.lockdown :unveil and :dev_unveil options for use of unveil instead of chroot (jeremyevans) 

= 0.12.0 (2019-04-29)

* Do not reference the rack middleware unicorn loads by default if unicorn is set to not load default middleware (jeremyevans)

= 0.11.0 (2019-03-18)

* Support separate log group and process primary group on Unicorn 5.5.0+ using :group option (jeremyevans)

* Make Roda pg_disconnect plugin support new Roda dispatch API (jeremyevans)

= 0.10.0 (2018-05-21)

* Use Mail.eager_autoload! if using the mail gem (jeremyevans)

* Add bin files to gemspec (jeremyevans)

= 0.9.0 (2018-05-02)

* Initial public release