@@ -1,0 +1,21 @@
+[ -z "${unicorn_conf}" ] && unicorn_conf=unicorn.conf
+
+daemon="/usr/local/bin/unicorn"
+daemon_flags="-c ${unicorn_conf} -D ${rackup_file}"
+
+[ -n "${unicorn_dir}" ] || rc_err "$0: unicorn_dir is not set"
+[ -n "${unicorn_app}" ] || rc_err "$0: unicorn_app is not set"
+
+. /etc/rc.d/rc.subr
+
+pexp="ruby[0-9][0-9]: unicorn-$unicorn_app-master .*"
+
+rc_start() {
+  ${rcexec} "cd ${unicorn_dir} && ${daemon} ${daemon_flags}"
+}
+
+rc_stop() {
+   pkill -QUIT -T "${daemon_rtable}" -xf "${pexp}" 
+}
+
+rc_cmd $1
